--- a/style.css
+++ b/style.css
@@ -1,24 +1,3 @@
-body{
-    /* This sets up the overall background color for the meeting minutes */
-    background-color: #e5eaf5;
-    color: rgb(0, 0, 0);
-}
-footer{
-    color: gray;
-    font-size: 1.5em;
-}
-header > details{
-    color: hsl(0, 0%, 50%);
-    margin: 10px;
-}
-#Intro{
-    border-style: dashed;
-    border-color: hsl(0, 0%, 50%);
-    border-width: 3px;
-    border-radius: 8px;
-    Padding: 4px 6px 4px 6px;
-    margin: 5px 5px 5px 5px;
-}
 nav > span{
     border-style: solid;
     border-color: gray;
@@ -26,9 +5,103 @@ nav > span{
     padding-left: 0.5em;
     padding-right: 0.5em;
     padding-bottom: 0.5em;
-    margin: 5px 5px 5px 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+span[att], nav > span:hover{
+    text-decoration: underline;
+}
+*{
+    /* This sets up the overall background color for the meeting minutes */
+    background-color: #e5eaf5;
+}
+
+body{
+    color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    font-family: 'Open Sans', sans-serif;
+}
+div.grid{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+}
+.grid > p{
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 5;
+}
+.grid > h1{
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 3;
+    grid-column-end: 5;
+}
+h1 ~ h2{
+    grid-row-start: 4;
+    grid-row-end: 5;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+footer{
+    display: block;
+    color: gray;
+    font-size: 1.5em;
+    position: static;
+}
+header details{
+    color: hsl(0, 0%, 50%);
+    margin: 10pc;
+}
+img{
+    max-width: 20%;
+    min-width: 15%;
 }
 nav > span > a{
     text-decoration: none;
     color: gray;
+}
+nav > span > a:active{
+    border-style: dashed;
+}
+form{
+    display: inline-block;
+    margin: auto;
+    text-align: center;
+    box-sizing: border-box
+}
+#agenda{
+    position: relative;
+    left: 25pt;
+}
+
+nav + p{
+    text-decoration: underline;
+}
+@media (min-width: 611px){
+    #Intro{
+        border-style: solid;
+        border-color: hsl(0, 0%, 50%);
+        border-width: 3px;
+        border-radius: 8px;
+        padding: 4px 6px 4px 6px;
+        margin: 5px 5px 5px 5px;
+    }
+}
+
+@media (max-width: 611px){
+    #Intro{
+        border-style: dashed;
+        border-color: hsl(0, 0%, 50%);
+        border-width: 3px;
+        border-radius: 8px;
+        padding: 4px 6px 4px 6px;
+        margin: 5px 5px 5px 5px;
+    }
 }
